# SPAM-of-random-Animefaces

./: CMakeLists.txt  Dockerfile  README.md  RPI.jfif  config.py  main.cpp  main.py  main.sh  model.py  showcase.ipynb  train.py  utils.h  utils.py
Animestream/: main.py  model.py
Demo_ncnn/: CMakeLists.txt  main.cpp
Demo_ncnn/weight/: TWNE_MINI.ncnn.param
Docker/: Dockerfile
Docker/TWDE_MINI/: generator.py  main.py
Docker/TWDE_MINI/static/: index.css  script.js
Docker/TWDE_MINI/templates/: index.html
TWDE_MINI/: Dockerfile
TWDE_MINI/TWDE_MINI/: generator.py  main.py
TWDE_MINI/TWDE_MINI/static/: index.css  script.js
TWDE_MINI/TWDE_MINI/templates/: index.html
stream/: config.py
stream/templates/: index.html
